--- a/projects/jtProject/index.html
+++ b/projects/jtProject/index.html
@@ -168,7 +168,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -558,7 +558,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -688,7 +688,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -818,7 +818,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -948,7 +948,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1078,7 +1078,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1208,7 +1208,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1338,7 +1338,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1468,7 +1468,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1598,7 +1598,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1728,7 +1728,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1858,7 +1858,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -1988,7 +1988,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -2118,7 +2118,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -2248,7 +2248,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
@@ -2378,7 +2378,7 @@
                       </li>
                     </ul>
                   </div>
-                  <div class="t-newsCardImg"><img src="/images/png/Frame.png"/></div>
+                  <div class="t-newsCardImg"><img src="images/png/Frame.png"/></div>
                   <div class="t-newsCardInfoHolder">
                     <div class="t-newsContent">
                       <div class="t-newsContentBody">
