--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -1280,6 +1280,7 @@
         </div>
       </div>
       <section class="t-searchSection t-absolute">
+        <div class="t-sloseBtn"></div>
         <div class="t-searchField">
           <input type="text" placeholder="Ищите статьи"/>
         </div>
