--- a/projects/jtProject/index.html
+++ b/projects/jtProject/index.html
@@ -2765,6 +2765,7 @@
         </div>
       </div>
       <section class="t-searchSection t-absolute">
+        <div class="t-sloseBtn"></div>
         <div class="t-searchField">
           <input type="text" placeholder="Ищите статьи"/>
         </div>
