--- a/projects/jtProject/authors.html
+++ b/projects/jtProject/authors.html
@@ -59,7 +59,7 @@
                 </svg>
                 <div class="t-smallModalMenu">
                   <div class="t-smallModalMenuMobileTitleWrapper">
-                    <h5 class="t-smallModalMenuMobileTitle">Фильтр и сортировка</h5>
+                    <h5 class="t-smallModalMenuMobileTitle">Сортировка</h5>
                     <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" class="t-backSmallMenuBtn">
                       <use xlink:href="#path0_fill6" fill="#FFF" class="t-svgBg"></use>
                       <use xlink:href="#path1_stroke6" transform="translate(7 8)" fill="#E0E0E0" class="t-svgFigure"></use>
@@ -69,13 +69,6 @@
                       </defs>
                     </svg>
                   </div>
-                  <h4 class="t-smallModalTitle">Тема</h4>
-                  <ul class="t-smallFilterMenu t-smallModalList">
-                    <li><a href="#">Все темы</a></li>
-                    <li><a href="#">Бизнес</a></li>
-                    <li><a href="#">Дизайн</a></li>
-                    <li><a href="#">Продажа</a></li>
-                  </ul>
                   <h4 class="t-smallModalTitle">Сортировка</h4>
                   <ul class="t-smallSortMenu t-smallModalList">
                     <li><a href="#">По дате</a></li>
