--- a/projects/jtProject/profile.html
+++ b/projects/jtProject/profile.html
@@ -136,7 +136,7 @@
         <div class="t-profileWrapperContainer">
           <div class="t-profileImgContainer">
             <div class="t-profileImgHolder">
-              <img src="/images/photos/takeoff.jpg" alt="">
+              <img src="images/photos/takeoff.jpg" alt="">
             </div>
           </div>
           <div class="t-profileSettingsAndInfo">
