--- a/projects/jtProject/profile.html
+++ b/projects/jtProject/profile.html
@@ -137,6 +137,17 @@
           <div class="t-profileImgContainer">
             <div class="t-profileImgHolder">
               <img src="images/photos/takeoff.jpg" alt="">
+              <div class="t-changeProfileImgHolder">
+                <div class="t-changePhotoWrapper">
+                  <svg class="t-editProfileImg" width="24" height="24" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><use xlink:href="#path0_fillEdit" class="t-svgBg" fill="#FFF"/><use xlink:href="#path1_fillEdit" class="t-svgFigure" transform="translate(8 8)" fill="#E0E0E0"/><defs><path id="path0_fillEdit"" d="M24 12c0 6.627-5.373 12-12 12S0 18.627 0 12 5.373 0 12 0s12 5.373 12 12z"/><path id="path1_fillEdit" fill-rule="evenodd" d="M7.87.507a1 1 0 0 1-.163 1.2l-6 6A1 1 0 1 1 .293 6.293L3.74 2.846l-.497.124a1 1 0 1 1-.486-1.94l4-1A1 1 0 0 1 7.87.507z"/></defs></svg>
+                  <div class="t-smallProfileMenu">
+                    <ul class="t-imgProfileCtrlList">
+                      <li class="loadImg">Загрузить изображение</li>
+                      <li class="removeImg">Удалить</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <div class="t-profileSettingsAndInfo">
